# aruco-parcel-marker

./: CMakeLists.txt  CameraCalibration.yml  README.md  README.txt
Main/: CMakeLists.txt  Main.cpp
ModuleInterface/: ModuleInterface.cpp  ModuleInterface.h
UDPImage/: CMakeLists.txt  UDPImage.cpp  UDPImage.h
UDPPublisher/: CMakeLists.txt  UDPPublisher.cpp  UDPPublisher.h
